[package]
name = "blue_bgg"
version = "0.1.0"
authors = ["Matthew Thompson <mat@matthewjthompson.co.uk>"]
description = "A Discord bot for interacting with the BoardGameGeek API"
edition = "2021"
license = "MIT"
repository = "https://github.com/MatthewThompson/BlueBGG"

[dependencies]
arnak = { path = "../arnak" }
poise = "0.6.1"
tokio = "1"
